--- a/game.project
+++ b/game.project
@@ -1,5 +1,5 @@
 [project]
-title = My project
+title = Sheeps Empire
 version = 0.1
 
 [bootstrap]
@@ -10,12 +10,16 @@ game_binding = /input/game.input_bindingc
 use_accelerometer = 0
 
 [display]
-width = 1280
-height = 720
+width = 800
+height = 600
 
 [physics]
 scale = 0.02
 
 [script]
 shared_state = 1
+
+[graphics]
+default_texture_min_filter = nearest
+default_texture_mag_filter = nearest
 
